--- a/options.conf
+++ b/options.conf
@@ -1,7 +1,7 @@
 [package]
 name = nushell
-url = https://github.com/nushell/nushell/archive/refs/tags/0.102.0.tar.gz
-archives = http://localhost/cgit/vendor/nushell/snapshot/nushell-2025-02-27-18-44-49.tar.gz ./vendor
+url = https://github.com/nushell/nushell/archive/0.103.0/nushell-0.103.0.tar.gz
+archives = http://localhost/cgit/vendor/nushell/snapshot/nushell-2025-04-10-17-52-47.tar.gz ./vendor
 giturl = https://github.com/nushell/nushell.git
 domain = 
 alias = 
