--- a/options.conf
+++ b/options.conf
@@ -1,7 +1,7 @@
 [package]
 name = nushell
-url = https://github.com/nushell/nushell/archive/0.104.0/nushell-0.104.0.tar.gz
-archives = http://localhost/cgit/vendor/nushell/snapshot/nushell-2025-04-30-15-17-44.tar.gz ./vendor
+url = https://github.com/nushell/nushell/archive/0.104.1/nushell-0.104.1.tar.gz
+archives = http://localhost/cgit/vendor/nushell/snapshot/nushell-2025-05-23-14-04-02.tar.gz ./vendor
 giturl = https://github.com/nushell/nushell.git
 domain = 
 alias = 
@@ -37,6 +37,8 @@ fast-math = false
 full-debug-info = false
 # optimize build for speed over size
 funroll-loops = false
+# require license subpackage for successful build
+has_license = true
 # set flags to smallest -02 flags possible
 insecure_build = false
 # do not remove static libraries
